-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 13
-
Component/s: hotspot
-
b10
-
ppc
-
linux
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8221150 | 11.0.4 | Matthias Baesken | P4 | Resolved | Fixed | b01 |
The current implementation of src/hotspot/cpu/ppc/nativeInst_ppc.cpp NativeGeneralJump::insert_unconditional should better use a stack allocated MacroAssembler object (compare to the aarch64 implementation of NativeGeneralJump::insert_unconditional ).
- backported by
-
JDK-8221150 ppc: adjust NativeGeneralJump::insert_unconditional to stack allocated MacroAssembler
-
- Resolved
-